Fixed xslt resource loading so that it's possible to run in non-exploded mode.